fix build warnnings and misc stuffs

--- a/darknet/Makefile
+++ b/darknet/Makefile
@@ -34,13 +34,14 @@ CFLAGS=-Wall -Wno-unknown-pragmas -Wfatal-errors -fPIC -fpermissive
 ifeq ($(ARCH_X86),1)
 CC=gcc
 CCP=g++
-LDFLAGS= -lm -pthread
+LDFLAGS += -lm -pthread
 endif
 
 ifeq ($(ARCH_ARM),1)
-CC=/home/lucas/Project/ZCU102/source/bsp/petalinux_2017-4/tools/linux-i386/aarch64-linux-gnu/bin/aarch64-linux-gnu-gcc
-CCP=/home/lucas/Project/ZCU102/source/bsp/petalinux_2017-4/tools/linux-i386/aarch64-linux-gnu/bin/aarch64-linux-gnu-g++
-LDFLAGS= -L/home/lucas/Project/ZCU102/source/bsp/petalinux_2017-4/tools/linux-i386/aarch64-linux-gnu/aarch64-linux-gnu/libc/usr/lib/ -lm -pthread
+CC=/home/lucas/Project/ZCU102/source/bsp/petalinux_2017-4/tools/linux-i386/aarch64-linux-gnu/bin/aarch64-linux-gnu-gcc 
+CCP=/home/lucas/Project/ZCU102/source/bsp/petalinux_2017-4/tools/linux-i386/aarch64-linux-gnu/bin/aarch64-linux-gnu-g++ 
+LDFLAGS += -L/usr/lib/ -lm -pthread
+CFLAGS += --sysroot="/home/lucas/Project/ZCU102/source/TRD_HOME_20174/rdf0421-zcu102-base-trd-2017-4/apu/petalinux_bsp/build/tmp/sysroots/plnx_aarch64"
 endif
 
 
@@ -60,10 +61,18 @@ endif
 CFLAGS+=$(OPTS)
 
 ifeq ($(OPENCV), 1) 
-COMMON+= -DOPENCV
-CFLAGS+= -DOPENCV
-LDFLAGS+= `pkg-config --libs opencv` 
-COMMON+= `pkg-config --cflags opencv` 
+COMMON += -DOPENCV
+CFLAGS += -DOPENCV
+ifeq ($(ARCH_X86),1)
+LDFLAGS += `pkg-config --libs opencv` 
+COMMON += `pkg-config --cflags opencv` 
+endif
+
+ifeq ($(ARCH_ARM),1)
+LDFLAGS += -lopencv_core -lopencv_imgcodecs -lopencv_highgui -lopencv_videoio -lopencv_imgproc
+LDFLAGS += -Wl,-rpath-link='/home/lucas/Project/Software/SDSoc_2017-4/SDK/2017.4/data/embeddedsw/ThirdParty/opencv/aarch64/lib'
+LDFLAGS += -Wl,-rpath='/usr/lib'
+endif
 endif
 
 ifeq ($(GPU), 1) 
@@ -71,15 +80,18 @@ COMMON+= -DGPU -I/usr/local/cuda-8.0/include/
 CFLAGS+= -DGPU
 LDFLAGS+= -L/usr/local/cuda-8.0/lib64 -lcuda -lcudart -lcublas -lcurand
 endif
-
 ifeq ($(CUDNN), 1) 
 COMMON+= -DCUDNN 
 CFLAGS+= -DCUDNN
 LDFLAGS+= -lcudnn
 endif
 
-OBJ= zcu102_api.o gemm.o utils.o cuda.o deconvolutional_layer.o convolutional_layer.o list.o image.o activations.o im2col.o col2im.o blas.o crop_layer.o dropout_layer.o maxpool_layer.o softmax_layer.o data.o matrix.o network.o connected_layer.o cost_layer.o parser.o option_list.o detection_layer.o route_layer.o box.o normalization_layer.o avgpool_layer.o layer.o local_layer.o shortcut_layer.o activation_layer.o rnn_layer.o gru_layer.o crnn_layer.o demo.o batchnorm_layer.o region_layer.o reorg_layer.o tree.o  lstm_layer.o
+OBJ= gemm.o utils.o cuda.o deconvolutional_layer.o convolutional_layer.o list.o image.o activations.o im2col.o col2im.o blas.o crop_layer.o dropout_layer.o maxpool_layer.o softmax_layer.o data.o matrix.o network.o connected_layer.o cost_layer.o parser.o option_list.o detection_layer.o route_layer.o box.o normalization_layer.o avgpool_layer.o layer.o local_layer.o shortcut_layer.o activation_layer.o rnn_layer.o gru_layer.o crnn_layer.o demo.o batchnorm_layer.o region_layer.o reorg_layer.o tree.o  lstm_layer.o
 EXECOBJA=captcha.o lsd.o super.o art.o tag.o cifar.o go.o rnn.o segmenter.o regressor.o classifier.o coco.o yolo.o detector.o nightmare.o attention.o darknet.o
+
+ifeq ($(OPENCV), 1)
+OBJ += zcu102_api.o
+endif
 
 ifeq ($(GPU), 1) 
 LDFLAGS+= -lstdc++ 
